--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset=UTF-8">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+    <meta name="viewport" content="user-scalable=no" />
     <link rel="icon" href="resources/biomorphIcon.png" type="image/png" sizes="16x16">
 
     <title>Biomorphsss</title>
