--- a/index.html
+++ b/index.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset=UTF-8">
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+    <meta charset="UTF-8">
+    <title>Biomorphsss</title>
+
     <meta name="viewport" content="width=device-width">
-    <!--<meta name="viewport" content="user-scalable=no" />-->
     <link rel="icon" href="resources/biomorphIcon.png" type="image/png" sizes="16x16">
 
-    <title>Biomorphsss</title>
-    <link rel="stylesheet" href="css/style.css"/>
-    <script src="js/lib/jquery.js"></script>
-    <script src="js/lib/jquery.color.js"></script>
-    <script src="js/lib/object.js"></script>
+
+    <link rel="stylesheet" href="style/style.css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/lib/math.js"></script>
     <script src="js/lib/number.js"></script>
     <script src="js/lib/array.js"></script>
