--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 
     <link rel="stylesheet" href="style/style.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="js/lib/math.js"></script>
-    <script src="js/lib/number.js"></script>
-    <script src="js/lib/array.js"></script>
+    <script src="js/util/util.js"></script>
     <script src="js/gene.js"></script>
     <script src="js/biomorph.js"></script>
+
 </head>
 <body>
 
