--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <title>Biomorphsss</title>
 
     <meta name="viewport" content="width=device-width">
-    <link rel="icon" href="../resources/biomorphIcon.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="resources/biomorphIcon.png" type="image/png" sizes="16x16">
 
 
-    <link rel="stylesheet" href="../style/style.css"/>
+    <link rel="stylesheet" href="style/style.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="../js/util/util.js"></script>
-    <script src="../js/gene.js"></script>
-    <script src="../js/biomorph.js"></script>
+    <script src="js/util/util.js"></script>
+    <script src="js/gene.js"></script>
+    <script src="js/biomorph.js"></script>
 
 </head>
 <body>
