new sidebar test

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="style/style.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="js/util/util.js"></script>
     <script src="js/gene.js"></script>
     <script src="js/biomorph.js"></script>
@@ -19,12 +21,21 @@
 <body>
 
 
-    <div class="sidebar">
-        <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
-        <a href="about.html"><i class="fa fa-fw fa-exclamation-circle"></i> About</a>
-        <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
+    <!--<div class="sidebar">-->
+        <!--<a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>-->
+        <!--<a href="about.html"><i class="fa fa-fw fa-exclamation-circle"></i> About</a>-->
+        <!--<a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>-->
+    <!--</div>-->
+
+    <div class="w3-sidebar w3-bar-block w3-black w3-xxlarge" style="width:70px">
+        <a href="#" class="w3-bar-item w3-button"><i class="fa fa-home"></i></a>
+        <a href="#" class="w3-bar-item w3-button"><i class="fa fa-search"></i></a>
+        <a href="#" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i></a>
+        <a href="#" class="w3-bar-item w3-button"><i class="fa fa-globe"></i></a>
+        <a href="#" class="w3-bar-item w3-button"><i class="fa fa-trash"></i></a>
     </div>
-    <div id="window">
+
+        <div id="window">
         <div class="cell"><canvas id="cell-1" width="150" height="150"></canvas></div>
         <div class="cell"><canvas id="cell-2" width="150" height="150"></canvas></div>
         <div class="cell"><canvas id="cell-3" width="150" height="150"></canvas></div>
