--- a/index.html
+++ b/index.html
@@ -10,51 +10,59 @@
 
     <link rel="stylesheet" href="style/style.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
+    <!--<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">-->
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="js/util/util.js"></script>
     <script src="js/gene.js"></script>
     <script src="js/biomorph.js"></script>
 
 </head>
+
 <body>
 
+<div class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-left" style="width:200px;" id="mySidebar">
+    <button class="w3-bar-item w3-button w3-large w3-hide-large" onclick="w3_close()">Close &times;</button>
+    <a href="#" class="w3-bar-item w3-button">Link 1</a>
+    <a href="#" class="w3-bar-item w3-button">Link 2</a>
+    <a href="#" class="w3-bar-item w3-button">Link 3</a>
+</div>
 
-    <!--<div class="sidebar">-->
-        <!--<a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>-->
-        <!--<a href="about.html"><i class="fa fa-fw fa-exclamation-circle"></i> About</a>-->
-        <!--<a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>-->
-    <!--</div>-->
-
-    
-    <div class="w3-sidebar w3-bar-block w3-black w3-xxlarge" style="width:70px">
-        <a href="#" class="w3-bar-item w3-button"><i class="fa fa-home"></i></a>
-        <a href="#" class="w3-bar-item w3-button"><i class="fa fa-search"></i></a>
-        <a href="#" class="w3-bar-item w3-button"><i class="fa fa-envelope"></i></a>
-        <a href="#" class="w3-bar-item w3-button"><i class="fa fa-globe"></i></a>
-        <a href="#" class="w3-bar-item w3-button"><i class="fa fa-trash"></i></a>
+<div class="w3-main" style="margin-left:200px">
+    <div class="w3-teal">
+        <button class="w3-button w3-teal w3-xlarge w3-hide-large" onclick="w3_open()">&#9776;</button>
+        <div class="w3-container">
+            <h1>Biomorph</h1>
+        </div>
     </div>
 
+    <div class="w3-container">
         <div id="window">
-        <div class="cell"><canvas id="cell-1" width="150" height="150"></canvas></div>
-        <div class="cell"><canvas id="cell-2" width="150" height="150"></canvas></div>
-        <div class="cell"><canvas id="cell-3" width="150" height="150"></canvas></div>
-        <div class="cell"><canvas id="cell-4" width="150" height="150"></canvas></div>
-        <div class="cell"><canvas id="cell-5" width="150" height="150"></canvas></div>
+            <div class="cell"><canvas id="cell-1" width="150" height="150"></canvas></div>
+            <div class="cell"><canvas id="cell-2" width="150" height="150"></canvas></div>
+            <div class="cell"><canvas id="cell-3" width="150" height="150"></canvas></div>
+            <div class="cell"><canvas id="cell-4" width="150" height="150"></canvas></div>
+            <div class="cell"><canvas id="cell-5" width="150" height="150"></canvas></div>
 
-        <div class="cell"><canvas id="cell-6" width="150" height="150"></canvas></div>
-        <div class="cell"><canvas id="cell-7" width="150" height="150"></canvas></div>
-        <div class="cell parent"><canvas id="cell-0" width="150" height="150"></canvas></div>
-        <div class="cell"><canvas id="cell-8" width="150" height="150"></canvas></div>
-        <div class="cell"><canvas id="cell-9" width="150" height="150"></canvas></div>
+            <div class="cell"><canvas id="cell-6" width="150" height="150"></canvas></div>
+            <div class="cell"><canvas id="cell-7" width="150" height="150"></canvas></div>
+            <div class="cell parent"><canvas id="cell-0" width="150" height="150"></canvas></div>
+            <div class="cell"><canvas id="cell-8" width="150" height="150"></canvas></div>
+            <div class="cell"><canvas id="cell-9" width="150" height="150"></canvas></div>
 
-        <div class="cell"><canvas id="cell-10" width="150" height="150"></canvas></div>
-        <div class="cell"><canvas id="cell-11" width="150" height="150"></canvas></div>
-        <div class="cell"><canvas id="cell-12" width="150" height="150"></canvas></div>
-        <div class="cell"><canvas id="cell-13" width="150" height="150"></canvas></div>
-        <div class="cell"><canvas id="cell-14" width="150" height="150"></canvas></div>
+            <div class="cell"><canvas id="cell-10" width="150" height="150"></canvas></div>
+            <div class="cell"><canvas id="cell-11" width="150" height="150"></canvas></div>
+            <div class="cell"><canvas id="cell-12" width="150" height="150"></canvas></div>
+            <div class="cell"><canvas id="cell-13" width="150" height="150"></canvas></div>
+            <div class="cell"><canvas id="cell-14" width="150" height="150"></canvas></div>
 
+        </div>
     </div>
+
+</div>
+
+
+
 </body>
 </html>
