--- a/index.html
+++ b/index.html
@@ -5,18 +5,15 @@
     <title>Biomorphsss</title>
 
     <meta name="viewport" content="width=device-width">
+    <!--<meta name="viewport" content="user-scalable=no" />-->
     <link rel="icon" href="resources/biomorphIcon.png" type="image/png" sizes="16x16">
-
-
     <link rel="stylesheet" href="style/style.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
-    <!--<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">-->
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="js/util/util.js"></script>
     <script src="js/gene.js"></script>
     <script src="js/biomorph.js"></script>
+    <script src="js/util/sidebar.js"></script>
 
 </head>
 
@@ -39,6 +36,17 @@
 
     <div class="w3-container">
         <div id="window">
+
+            <!--<div class="cell">1</div>-->
+            <!--<div class="cell">1</div>-->
+            <!--<div class="cell">1</div>-->
+            <!--<div class="cell">1</div>-->
+            <!--<div class="cell">1</div>-->
+            <!--<div class="cell">1</div>-->
+            <!--<div class="cell">1</div>-->
+            <!--<div class="cell">1</div>-->
+            <!--<div class="cell">1</div>-->
+            <!--<div class="cell">1</div>-->
             <div class="cell"><canvas id="cell-1" width="150" height="150"></canvas></div>
             <div class="cell"><canvas id="cell-2" width="150" height="150"></canvas></div>
             <div class="cell"><canvas id="cell-3" width="150" height="150"></canvas></div>
