--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Biomorphsss</title>
 
-    <meta name="viewport" content="width=device-width">
-    <!--<meta name="viewport" content="user-scalable=no" />-->
+    <!--<meta name="viewport" content="width=device-width">-->
+    <meta name="viewport" content="user-scalable=no" />
     <link rel="icon" href="resources/biomorphIcon.png" type="image/png" sizes="16x16">
     <link rel="stylesheet" href="style/style.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
