--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <body>
 
 <div class="sidebar">
-    <a href="index.html"><i class="fa fa-fw fa-home"></i> Home</a>
+    <a href="index3.html"><i class="fa fa-fw fa-home"></i> Home</a>
     <a href="about.html"><i class="fa fa-fw fa-exclamation-circle"></i> About</a>
     <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
 </div>
