--- a/index.html
+++ b/index.html
@@ -4,71 +4,59 @@
     <meta charset="UTF-8">
     <title>Biomorphsss</title>
 
-    <!--<meta name="viewport" content="width=device-width">-->
-    <meta name="viewport" content="user-scalable=no" />
+    <meta name="viewport" content="width=device-width">
+    <!--<meta name="viewport" content="user-scalable=no" />-->
     <link rel="icon" href="resources/biomorphIcon.png" type="image/png" sizes="16x16">
-    <link rel="stylesheet" href="style/style.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="style/style.css"/>
+    <link rel="stylesheet" href="style/sideBarStyle.css"/>
     <script src="js/util/util.js"></script>
     <script src="js/gene.js"></script>
     <script src="js/biomorph.js"></script>
     <script src="js/util/sidebar.js"></script>
 
+
 </head>
 
 <body>
+<div id="wrapper">
+    <div class="overlay"></div>
 
-<div class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-left" style="width:200px;" id="mySidebar">
-    <button class="w3-bar-item w3-button w3-large w3-hide-large" onclick="w3_close()">Close &times;</button>
-    <a href="#" class="w3-bar-item w3-button">Link 1</a>
-    <a href="#" class="w3-bar-item w3-button">Link 2</a>
-    <a href="#" class="w3-bar-item w3-button">Link 3</a>
-</div>
+    <!-- Sidebar -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper" role="navigation">
+        <ul class="nav sidebar-nav">
+            <li class="sidebar-brand"><a href="index3.html"><img src="resources/biomorphIcon.png" alt="biomorph" width="42" height="42">&nbspBiomorph</a></li>
+            <li><a href="index3.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="#">Follow me</a></li>
+        </ul>
+    </nav>
 
-<div class="w3-main" style="margin-left:200px">
-    <div class="w3-teal">
-        <button class="w3-button w3-teal w3-xlarge w3-hide-large" onclick="w3_open()">&#9776;</button>
-        <div class="w3-container">
-            <h1>Biomorph</h1>
-        </div>
-    </div>
-
-    <div class="w3-container">
-        <div id="window">
-
-            <!--<div class="cell">1</div>-->
-            <!--<div class="cell">1</div>-->
-            <!--<div class="cell">1</div>-->
-            <!--<div class="cell">1</div>-->
-            <!--<div class="cell">1</div>-->
-            <!--<div class="cell">1</div>-->
-            <!--<div class="cell">1</div>-->
-            <!--<div class="cell">1</div>-->
-            <!--<div class="cell">1</div>-->
-            <!--<div class="cell">1</div>-->
-            <div class="cell"><canvas id="cell-1" width="150" height="150"></canvas></div>
-            <div class="cell"><canvas id="cell-2" width="150" height="150"></canvas></div>
-            <div class="cell"><canvas id="cell-3" width="150" height="150"></canvas></div>
-            <div class="cell"><canvas id="cell-4" width="150" height="150"></canvas></div>
-            <div class="cell"><canvas id="cell-5" width="150" height="150"></canvas></div>
-
-            <div class="cell"><canvas id="cell-6" width="150" height="150"></canvas></div>
-            <div class="cell"><canvas id="cell-7" width="150" height="150"></canvas></div>
-            <div class="cell parent"><canvas id="cell-0" width="150" height="150"></canvas></div>
-            <div class="cell"><canvas id="cell-8" width="150" height="150"></canvas></div>
-            <div class="cell"><canvas id="cell-9" width="150" height="150"></canvas></div>
-
-            <div class="cell"><canvas id="cell-10" width="150" height="150"></canvas></div>
-            <div class="cell"><canvas id="cell-11" width="150" height="150"></canvas></div>
-            <div class="cell"><canvas id="cell-12" width="150" height="150"></canvas></div>
-            <div class="cell"><canvas id="cell-13" width="150" height="150"></canvas></div>
-            <div class="cell"><canvas id="cell-14" width="150" height="150"></canvas></div>
-
+    <!-- Page Content -->
+    <div id="page-content-wrapper">
+        <button type="button" class="hamburger is-closed" data-toggle="offcanvas">
+            <span class="hamb-top"></span>
+            <span class="hamb-middle"></span>
+            <span class="hamb-bottom"></span>
+        </button>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+                    <h1>Biomorph</h1>
+                </div>
+            </div>
         </div>
     </div>
 
 </div>
+
+
+
+
+
 
 </body>
 </html>
