add biomorphs in the content of the bootstarpt sidebar- TEST

--- a/index.html
+++ b/index.html
@@ -45,7 +45,27 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h1>Biomorph</h1>
+                    <!--<h1>Biomorph</h1>-->
+                    <div id="window">
+                        <div class="cell"><canvas id="cell-1" width="150" height="150"></canvas></div>
+                        <div class="cell"><canvas id="cell-2" width="150" height="150"></canvas></div>
+                        <div class="cell"><canvas id="cell-3" width="150" height="150"></canvas></div>
+                        <div class="cell"><canvas id="cell-4" width="150" height="150"></canvas></div>
+                        <div class="cell"><canvas id="cell-5" width="150" height="150"></canvas></div>
+
+                        <div class="cell"><canvas id="cell-6" width="150" height="150"></canvas></div>
+                        <div class="cell"><canvas id="cell-7" width="150" height="150"></canvas></div>
+                        <div class="cell parent"><canvas id="cell-0" width="150" height="150"></canvas></div>
+                        <div class="cell"><canvas id="cell-8" width="150" height="150"></canvas></div>
+                        <div class="cell"><canvas id="cell-9" width="150" height="150"></canvas></div>
+
+                        <div class="cell"><canvas id="cell-10" width="150" height="150"></canvas></div>
+                        <div class="cell"><canvas id="cell-11" width="150" height="150"></canvas></div>
+                        <div class="cell"><canvas id="cell-12" width="150" height="150"></canvas></div>
+                        <div class="cell"><canvas id="cell-13" width="150" height="150"></canvas></div>
+                        <div class="cell"><canvas id="cell-14" width="150" height="150"></canvas></div>
+
+                    </div>
                 </div>
             </div>
         </div>
