magnifiy sidebar-TEST

--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
     <!-- Sidebar -->
     <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper" role="navigation">
         <ul class="nav sidebar-nav">
-            <li class="sidebar-brand"><a href="index3.html"><img src="resources/biomorphIcon.png" alt="biomorph" width="42" height="42">&nbspBiomorph</a></li>
-            <li><a href="index3.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="#">Follow me</a></li>
+            <li class="sidebar-brand"><a href="index.html">Biomorph<img src="resources/biomorphIcon.png" alt="biomorph" width="42" height="42"></a></li>
+            <li class="sidebar-child"><a href="index.html">Home</a></li>
+            <li class="sidebar-child"><a href="about.html">About</a></li>
+            <li class="sidebar-child"><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
