--- a/contact.html
+++ b/contact.html
@@ -1,21 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <title>Biomorph | Contact</title>
-    <meta name="viewport" content="width=device-width">
+    <title>Biomorph|Contact</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="resources/biomorphIcon.png" type="image/png" sizes="16x16">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="style/style.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="style/sideBarStyle.css"/>
+    <script src="js/util/sidebar.js"></script>
 
 </head>
-<body>
 
-<div class="sidebar">
-    <a href="index3.html"><i class="fa fa-fw fa-home"></i> Home</a>
-    <a href="about.html"><i class="fa fa-fw fa-exclamation-circle"></i> About</a>
-    <a href="contact.html"><i class="fa fa-fw fa-envelope"></i> Contact</a>
+<body>
+<div id="wrapper">
+    <div class="overlay"></div>
+
+    <!-- Sidebar -->
+    <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper" role="navigation">
+        <ul class="nav sidebar-nav">
+            <li class="sidebar-brand"><a href="index.html"><img src="resources/biomorphIcon.png" alt="biomorph" width="42" height="42">&nbsp;Biomorph</a></li>
+            <li class="sidebar-child"><a href="index.html">Home</a></li>
+            <li class="sidebar-child"><a href="about.html">About</a></li>
+            <li class="sidebar-child"><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!-- Page Content -->
+    <div id="page-content-wrapper">
+        <button type="button" class="hamburger is-closed" data-toggle="offcanvas">
+            <span class="hamb-top"></span>
+            <span class="hamb-middle"></span>
+            <span class="hamb-bottom"></span>
+        </button>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2">
+
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
+
+
+
+
 
 
 </body>
