-complete About page -complete Readme.md

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,16 +2,16 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Biomorph|About</title>
+    <title>Biomorph - Contact</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="resources/biomorphIcon.png" type="image/png" sizes="16x16">
+    <link rel="icon" href="../resources/biomorphIcon.png" type="image/png" sizes="16x16">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="style/style.css"/>
-    <link rel="stylesheet" href="style/sideBarStyle.css"/>
-    <script src="js/util/sidebar.js"></script>
+    <link rel="stylesheet" href="../style/style.css"/>
+    <link rel="stylesheet" href="../style/sideBarStyle.css"/>
+    <script src="../js/util/sidebar.js"></script>
 
 </head>
 
@@ -22,8 +22,8 @@
     <!-- Sidebar -->
     <nav class="navbar navbar-inverse navbar-fixed-top" id="sidebar-wrapper" role="navigation">
         <ul class="nav sidebar-nav">
-            <li class="sidebar-brand"><a href="index.html"><img src="resources/biomorphIcon.png" alt="biomorph" width="42" height="42">&nbsp;Biomorph</a></li>
-            <li class="sidebar-child"><a href="index.html">Home</a></li>
+            <li class="sidebar-brand"><a href="../index.html"><img src="../resources/biomorphIcon.png" alt="biomorph" width="42" height="42">&nbsp;Biomorph</a></li>
+            <li class="sidebar-child"><a href="../index.html">Home</a></li>
             <li class="sidebar-child"><a href="about.html">About</a></li>
             <li class="sidebar-child"><a href="contact.html">Contact</a></li>
         </ul>
