--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <ul class="nav sidebar-nav">
             <li class="sidebar-brand"><a href="index.html"><img src="resources/biomorphIcon.png" alt="biomorph" width="42" height="42">&nbsp;Biomorph</a></li>
             <li class="sidebar-child"><a href="index.html">Home</a></li>
-            <li class="sidebar-child"><a href="about.html">About</a></li>
-            <li class="sidebar-child"><a href="contact.html">Contact</a></li>
+            <li class="sidebar-child"><a href="pages/about.html">About</a></li>
+            <li class="sidebar-child"><a href="pages/contact.html">Contact</a></li>
         </ul>
     </nav>
 
